# priact

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
actor-macro/: Cargo.toml
actor-macro/src/: lib.rs
priact-actor-macro/: Cargo.toml  README.md
priact-actor-macro/src/: lib.rs
src/: lib.rs  lib_test.rs  main.rs
