[package]
name = "priact"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Burkhart <andrew.burkhart@outlook.com>"]
description = "A lightweight and ergonomic Actor implementation for Rust, built on tokio, featuring explicit message prioritization via a BinaryHeap."
readme      = "README.md"
license     = "MIT"
documentation = "https://docs.rs/priact"
repository = "https://github.com/drewburkhart/priact"
keywords = ["actor", "tokio", "concurrency", "async", "priority"]
categories = ["concurrency", "network-programming", "utility-libraries"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actor-macro = { path = "./actor-macro" }
async-trait = "0.1"           # if not already
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
