[package]
name = "actor-macro"
version = "0.1.0"
edition = "2021"
description = "A proc-macro for defining actors with priority and async support"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
# syn for parsing Rust syntax trees
syn = { version = "1.0", features = ["full"] }
# quote for turning Rust syntax trees back into tokens
quote = "1.0"
# proc-macro2 underpins both syn and quote
proc-macro2 = "1.0"
# async-trait to allow async in traits
async-trait = "0.1"
